@@ -6,6 +6,7 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.boot.test.mock.mockito.SpyBean;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import swyp.swyp6_team7.bookmark.service.BookmarkService;
@@ -24,6 +25,8 @@ import swyp.swyp6_team7.travel.dto.TravelRecommendForMemberDto;
 import swyp.swyp6_team7.travel.dto.response.TravelRecentDto;
 import swyp.swyp6_team7.travel.repository.TravelRepository;
 
+import java.time.Clock;
+import java.time.Instant;
 import java.time.LocalDate;
 import java.util.Arrays;
 import java.util.HashMap;
@@ -62,6 +65,9 @@ class TravelHomeServiceTest {
     @MockBean
     private BookmarkService bookmarkService;
 
+    @SpyBean
+    private Clock clockMock;
+
     @AfterEach
     void tearDown() {
         travelTagRepository.deleteAllInBatch();
@@ -70,19 +76,18 @@ class TravelHomeServiceTest {
         locationRepository.deleteAllInBatch();
     }
 
-    @DisplayName("최근 생성된 순서로 여행 목록을 가져오고 로그인 상태인 경우 사용자의 북마크 여부를 추가로 설정한다.")
+    @DisplayName("최근 생성된 순서로 정렬된 여행 목록을 가져오고 로그인 상태라면 사용자의 북마크 여부를 추가로 설정한다.")
     @Test
     void getTravelsSortedByCreatedAt() {
         // given
         Integer loginUserNumber = 1;
         Location location = locationRepository.save(createLocation("Seoul", LocationType.DOMESTIC));
-        LocalDate dueDate = LocalDate.of(2024, 11, 7);
         Travel travel1 = travelRepository.save(createTravel(
                 1, location, "여행", 0, 0, GenderType.MIXED,
-                dueDate, PeriodType.ONE_WEEK, IN_PROGRESS, Arrays.asList()));
+                PeriodType.ONE_WEEK, IN_PROGRESS, Arrays.asList()));
         Travel travel2 = travelRepository.save(createTravel(
                 1, location, "여행", 0, 0, GenderType.MIXED,
-                dueDate, PeriodType.ONE_WEEK, IN_PROGRESS, Arrays.asList()));
+                PeriodType.ONE_WEEK, IN_PROGRESS, Arrays.asList()));
 
         Map<Integer, Boolean> bookmarkedMap = new HashMap<>();
         bookmarkedMap.put(travel1.getNumber(), true);
@@ -103,19 +108,18 @@ class TravelHomeServiceTest {
                 );
     }
 
-    @DisplayName("최근 생성된 순서로 여행 목록을 가져오고 비로그인 상태인 경우 사용자의 북마크 여부는 전부 false이다.")
+    @DisplayName("최근 생성된 순서로 여행 목록을 가져오고 비로그인 상태라면 사용자의 북마크 여부는 전부 false이다.")
     @Test
     void getTravelsSortedByCreatedAtWhenNotLogin() {
         // given
         Integer loginUserNumber = null;
         Location location = locationRepository.save(createLocation("Seoul", LocationType.DOMESTIC));
-        LocalDate dueDate = LocalDate.of(2024, 11, 7);
         Travel travel1 = travelRepository.save(createTravel(
                 1, location, "여행", 0, 0, GenderType.MIXED,
-                dueDate, PeriodType.ONE_WEEK, IN_PROGRESS, Arrays.asList()));
+                PeriodType.ONE_WEEK, IN_PROGRESS, Arrays.asList()));
         Travel travel2 = travelRepository.save(createTravel(
                 1, location, "여행", 0, 0, GenderType.MIXED,
-                dueDate, PeriodType.ONE_WEEK, IN_PROGRESS, Arrays.asList()));
+                PeriodType.ONE_WEEK, IN_PROGRESS, Arrays.asList()));
 
         // when
         Page<TravelRecentDto> result = travelHomeService.getTravelsSortedByCreatedAt(PageRequest.of(0, 5), loginUserNumber);
@@ -129,7 +133,7 @@ class TravelHomeServiceTest {
                 );
     }
 
-    @DisplayName("사용자의 선호 태그와 공통되는 여행 태그 개수 preferredNumber가 큰 순서대로 여행 목록을 가져온다.")
+    @DisplayName("사용자의 선호 태그를 많이 가진 순서로 정렬된 여행 목록을 가져온다.")
     @Test
     void getRecommendTravelsByMember() {
         // given
@@ -140,75 +144,35 @@ class TravelHomeServiceTest {
         tagRepository.saveAll(List.of(tag1, tag2, tag3, tag4));
 
         Location location = locationRepository.save(createLocation("Seoul", LocationType.DOMESTIC));
-        LocalDate dueDate = LocalDate.of(2024, 11, 7);
         Travel travel1 = createTravel(
                 1, location, "여행", 0, 0, GenderType.MIXED,
-                dueDate, PeriodType.ONE_WEEK, IN_PROGRESS, Arrays.asList(tag1));
+                PeriodType.ONE_WEEK, IN_PROGRESS, Arrays.asList(tag1));
         Travel travel2 = createTravel(
                 1, location, "여행", 0, 0, GenderType.MIXED,
-                dueDate, PeriodType.ONE_WEEK, IN_PROGRESS, Arrays.asList(tag1, tag2));
+                PeriodType.ONE_WEEK, IN_PROGRESS, Arrays.asList(tag1, tag2));
         Travel travel3 = createTravel(
                 1, location, "여행", 0, 0, GenderType.MIXED,
-                dueDate.plusDays(1), PeriodType.ONE_WEEK, IN_PROGRESS, Arrays.asList(tag1, tag4));
-        Travel travel4 = createTravel(
-                1, location, "여행", 0, 0, GenderType.MIXED,
-                dueDate, PeriodType.ONE_WEEK, IN_PROGRESS, Arrays.asList(tag1, tag2, tag3));
-        travelRepository.saveAll(List.of(travel1, travel2, travel3, travel4));
+                PeriodType.ONE_WEEK, IN_PROGRESS, Arrays.asList(tag1, tag2, tag3));
+        travelRepository.saveAll(List.of(travel1, travel2, travel3));
 
-        LocalDate requestDate = LocalDate.of(2024, 11, 6);
-
+        given(clockMock.instant()).willReturn(Instant.parse("2024-11-06T00:00:00Z"));
         given(userTagPreferenceRepository.findPreferenceTagsByUserNumber(any(Integer.class)))
                 .willReturn(Arrays.asList("쇼핑", "자연", "먹방"));
 
         // when
-        Page<TravelRecommendForMemberDto> result = travelHomeService.getRecommendTravelsByMember(PageRequest.of(0, 5), 1, requestDate);
+        Page<TravelRecommendForMemberDto> result = travelHomeService.getRecommendTravelsByMember(PageRequest.of(0, 5), 1);
 
         // then
-        assertThat(result.getContent()).hasSize(4)
-                .extracting("travelNumber", "tags", "preferredNumber", "registerDue")
+        assertThat(result.getContent()).hasSize(3)
+                .extracting("travelNumber", "tags", "preferredNumber")
                 .containsExactly(
-                        tuple(travel4.getNumber(), Arrays.asList("쇼핑", "자연", "먹방"), 3, dueDate),
-                        tuple(travel2.getNumber(), Arrays.asList("쇼핑", "자연"), 2, dueDate),
-                        tuple(travel1.getNumber(), Arrays.asList("쇼핑"), 1, dueDate),
-                        tuple(travel3.getNumber(), Arrays.asList("쇼핑", "즉흥"), 1, dueDate.plusDays(1))
+                        tuple(travel3.getNumber(), Arrays.asList("쇼핑", "자연", "먹방"), 3),
+                        tuple(travel2.getNumber(), Arrays.asList("쇼핑", "자연"), 2),
+                        tuple(travel1.getNumber(), Arrays.asList("쇼핑"), 1)
                 );
     }
 
-    @DisplayName("사용자의 선호 태그와 공통되는 여행 태그 개수 preferredNumber가 동일한 경우 registerDue가 빠른 순서대로 여행을 가져온다.")
-    @Test
-    void getRecommendTravelsByMemberWhenSamePreferredNumber() {
-        Tag tag1 = Tag.of("쇼핑");
-        Tag tag2 = Tag.of("자연");
-        tagRepository.saveAll(List.of(tag1, tag2));
-
-        Location location = locationRepository.save(createLocation("Seoul", LocationType.DOMESTIC));
-        LocalDate dueDate = LocalDate.of(2024, 11, 7);
-        Travel travel1 = createTravel(
-                1, location, "여행", 0, 0, GenderType.MIXED,
-                dueDate.plusDays(1), PeriodType.ONE_WEEK, IN_PROGRESS, Arrays.asList(tag1, tag2));
-        Travel travel2 = createTravel(
-                1, location, "여행", 0, 0, GenderType.MIXED,
-                dueDate, PeriodType.ONE_WEEK, IN_PROGRESS, Arrays.asList(tag1, tag2));
-        travelRepository.saveAll(List.of(travel1, travel2));
-
-        LocalDate requestDate = LocalDate.of(2024, 11, 6);
-
-        given(userTagPreferenceRepository.findPreferenceTagsByUserNumber(any(Integer.class)))
-                .willReturn(Arrays.asList("쇼핑", "자연"));
-
-        // when
-        Page<TravelRecommendForMemberDto> result = travelHomeService.getRecommendTravelsByMember(PageRequest.of(0, 5), 1, requestDate);
-
-        // then
-        assertThat(result.getContent()).hasSize(2)
-                .extracting("travelNumber", "tags", "preferredNumber", "registerDue")
-                .containsExactly(
-                        tuple(travel2.getNumber(), Arrays.asList("쇼핑", "자연"), 2, dueDate),
-                        tuple(travel1.getNumber(), Arrays.asList("쇼핑", "자연"), 2, dueDate.plusDays(1))
-                );
-    }
-
-    @DisplayName("preferredNumber, registerDue가 동일한 경우 title을 기준으로 가나다 순서대로 가져온다.")
+    @DisplayName("preferredNumber 값이 같으면 title이 오름차순으로 정렬된 여행 목록을 가져온다.")
     @Test
     void getRecommendTravelsByMemberWhenSamePreferredNumberSameRegisterDue() {
         Tag tag1 = Tag.of("쇼핑");
@@ -216,29 +180,27 @@ class TravelHomeServiceTest {
         tagRepository.saveAll(List.of(tag1, tag2));
 
         Location location = locationRepository.save(createLocation("Seoul", LocationType.DOMESTIC));
-        LocalDate dueDate = LocalDate.of(2024, 11, 7);
         Travel travel1 = createTravel(
                 1, location, "여행-나", 0, 0, GenderType.MIXED,
-                dueDate, PeriodType.ONE_WEEK, IN_PROGRESS, Arrays.asList(tag1, tag2));
+                PeriodType.ONE_WEEK, IN_PROGRESS, Arrays.asList(tag1, tag2));
         Travel travel2 = createTravel(
                 1, location, "여행-가", 0, 0, GenderType.MIXED,
-                dueDate, PeriodType.ONE_WEEK, IN_PROGRESS, Arrays.asList(tag1, tag2));
+                PeriodType.ONE_WEEK, IN_PROGRESS, Arrays.asList(tag1, tag2));
         travelRepository.saveAll(List.of(travel1, travel2));
 
-        LocalDate requestDate = LocalDate.of(2024, 11, 6);
-
+        given(clockMock.instant()).willReturn(Instant.parse("2024-11-06T00:00:00Z"));
         given(userTagPreferenceRepository.findPreferenceTagsByUserNumber(any(Integer.class)))
                 .willReturn(Arrays.asList("쇼핑", "자연"));
 
         // when
-        Page<TravelRecommendForMemberDto> result = travelHomeService.getRecommendTravelsByMember(PageRequest.of(0, 5), 1, requestDate);
+        Page<TravelRecommendForMemberDto> result = travelHomeService.getRecommendTravelsByMember(PageRequest.of(0, 5), 1);
 
         // then
         assertThat(result.getContent()).hasSize(2)
-                .extracting("travelNumber", "tags", "preferredNumber", "registerDue", "title")
+                .extracting("travelNumber", "tags", "preferredNumber", "title")
                 .containsExactly(
-                        tuple(travel2.getNumber(), Arrays.asList("쇼핑", "자연"), 2, dueDate, "여행-가"),
-                        tuple(travel1.getNumber(), Arrays.asList("쇼핑", "자연"), 2, dueDate, "여행-나")
+                        tuple(travel2.getNumber(), Arrays.asList("쇼핑", "자연"), 2, "여행-가"),
+                        tuple(travel1.getNumber(), Arrays.asList("쇼핑", "자연"), 2, "여행-나")
                 );
     }
 
@@ -250,23 +212,23 @@ class TravelHomeServiceTest {
     }
 
     private Travel createTravel(
-            int hostNumber, Location location, String title, int viewCount, int maxPerson, GenderType genderType,
-            LocalDate dueDate, PeriodType periodType, TravelStatus status, List<Tag> tags
+            int hostNumber, Location location, String title, int viewCount, int maxPerson,
+            GenderType genderType, PeriodType periodType, TravelStatus status, List<Tag> tags
     ) {
         return Travel.builder()
                 .userNumber(hostNumber)
                 .location(location)
                 .locationName(location.getLocationName())
+                .startDate(LocalDate.of(2024, 11, 22))
+                .endDate(LocalDate.of(2024, 11, 28))
                 .title(title)
                 .details("여행 내용")
                 .viewCount(viewCount)
                 .maxPerson(maxPerson)
                 .genderType(genderType)
-                .dueDate(dueDate)
                 .periodType(periodType)
                 .status(status)
                 .tags(tags)
                 .build();
     }
-
 }
